# deep-learning-from-scratch-notes

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.MD  README.md  _brand.yml  _quarto-html.yml  _quarto-jupyter.yml  _quarto-typst-en.yml  _quarto-typst-zh.yml  _quarto.yml  index.qmd  refs_article.bib  refs_media.bib  requirements.txt  ruff.toml  style.css
.github/workflows/: deep-learning-ci.yml  package-notebook.yml  publish.yml
assets/js/: academic-home.js
deep_learning/: README.md  pyproject.toml  ruff.toml
deep_learning/deep_learning/: __init__.py  pylabtools.py
deep_learning/deep_learning/models/ddpm/: unet.py
deep_learning/deep_learning/models/mlp/: activation.py  layer.py  loss.py  mlp.py  optimizer.py
deep_learning/deep_learning/models/seq2seq/: transformer.py
deep_learning/deep_learning/models/vit/: vit.py
deep_learning/deep_learning/nn/: attention.py
deep_learning/deep_learning/nn/functional/: attention.py
deep_learning/deep_learning/optim/: adadelta.py  adagrad.py  adam.py  adamw.py  muon.py  rmsprop.py  sgd.py  utils.py
deep_learning/deep_learning/tests/: conftest.py  test_nn_attention.py  test_nn_autoencoder.py  test_nn_diffusion.py  test_nn_flash_attention.py  test_nn_transformer.py
en/: README.md  index.qmd
en/chapter01-introduction/: chapter-1.1-neural-network.qmd
en/chapter03-multi-layer-perception/: chapter-3.1-from-linear-model-to-mlp.qmd  chapter-3.2-activation-functions.qmd  chapter-3.3-softmax-cross-entropy.qmd  chapter-3.4-linear-layer.qmd  chapter-3.5-mlp-from-scratch.qmd  chapter-3.6-train-mlp-on-mnist.qmd  chapter-3.7-gradient-checking.qmd
en/chapter04-optimization-algorithms/: chapter-4.1-gradient-descent.qmd  chapter-4.2-momentum-nesterov.qmd  chapter-4.3-adagrad.qmd  chapter-4.4-rmsprop-adadelta.qmd  chapter-4.5-adam.qmd  chapter-4.6-adamw.qmd  chapter-4.7-muon.qmd  chapter-4.8-optimizer-practice.qmd  chapter-4.9-learning-rate-schedulers.qmd
en/chapter08-attention-and-transformers/: chapter-8.1-bahdanau-attention.qmd
en/chatper02-pytorch-introduction/: chapter-2.1-automatic-differentiation.qmd  chapter-2.2-dim-transform-appendix.qmd  chapter-2.3-auto-grad-contexts.qmd  chapter-2.4-dataset-and-dataloader.qmd  chapter-2.5-nn-module.qmd  chapter-2.6-optimizer.qmd  (+2 more)
utils/: download_datasets.py  generate_toc.py  generate_typst_en.py  generate_typst_zh.py  rename_pdf.py  typst-header-en.typ  typst-header-zh.typ
zh/: README.md  _metadata.yml  index.qmd
(+36 files in other folders)
