[project]
name = "deep-learning"
version = "2026.05.13"
keywords = ["deep learning", "jupyter notebook", "tutorial"]
description = "Deep Learning Notes Library"
authors = [{ name = "Brench", email = "brenchchen.77@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    'numpy >= 1.26, < 3',
    'torch >= 2.8, < 3',
]

[project.optional-dependencies]
test = ['pytest >= 8, < 10']

[project.urls]
Homepage = "https://github.com/BrenchCC/deep-learning-from-scratch-notes"

[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.build_meta"
